2007-10-04 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/net/dict.rb: Cache methods moved to source_base.rb. This
    way, any source plugin can benefit from the cache system.

    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/source_base.rb: Better separation of UI and non UI.
    Implements define and match methods.

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Follow above changes.
    
    * lib/fantasdic/ui/main_app.rb: Multiple backends support. Overall it seems
    to work fine but it needs further testing.

2007-10-03 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb:
    * lib/fantasdic/source_base.rb:
    * lib/fantasdic/ui/add_dictionary_dialog.rb: Pass parent dialog and
    on_databases_updated callback to config_widget instead of constructor.

2007-10-02 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb: Ensures that database list has not
    been updated already when focus-out-event is triggered. Generates the
    config widget on config_widget, not on initialize.

2007-09-30 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Fixed a bug which prevented
    existing dictionaries from being updated.

2007-09-30 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/ui/add_dictionary_dialog.rb: Fixed a bug which prevented
    the databases list from being displayed in some cases.

2007-09-30 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/sources/dict_server.rb: Initialize data after initializing
    signals.

2007-09-30 Mathieu Blondel <mblondel@svn.gnome.org>

    * lib/fantasdic/source_base.rb: Beginning of multiple source backends
    support... This works like a plugin system. Source::Base is a base class for
    dictionary sources. It also keeps a list of available sources. Sources can
    be system-wide (e.g. /usr/lib/ruby/1.8/fantasdic/sources/) or user-wide